--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.8.4",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
     "keen-slider": "^6.8.6",
@@ -21,6 +23,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.17.2"
   },
