--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "yet-another-react-lightbox": "^3.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
