--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.5.0",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
