--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "match-sorter": "^8.0.0",
+    "motion": "^12.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
